# Tumbler-Vulkan

./: .gitignore  CMakeLists.txt  README.md  Tumbler_Dev_Plan.md  build_err2.txt  build_log.txt  help.md  imgui.ini  main.cpp  vcpkg.json
.github/workflows/: build.yml
assets/models/: README.md
assets/shaders/: CMakeLists.txt
assets/shaders/engine/: deferred_geometry.frag  deferred_lighting.frag  deferred_lighting.vert  pbr.frag  pbr.vert
assets/shaders/example/triangle/: triangle.frag  triangle.vert
docs/: 00_Getting_Started.md  01_Architecture_Overview.md  02_Asset_Management.md  03_Material_System.md  04_PBR_Theory_and_Practice.md  05_Vulkan_Core_Concepts.md  06_Game_System_Architecture.md  07_Input_System.md  08_Editor_and_Debugging.md  09_Rendering_Pipeline_Deep_Dive.md  10_Troubleshooting_Guide.md  11_Image_Based_Lighting.md  12_Code_Navigation_Guide.md  INDEX.md  RenderingArchitecture.md
include/core/: VulkanDevice.h  VulkanModel.h  VulkanWindow.h
shaders/: CMakeLists.txt  shader.frag
shaders/example/: shader.vert
src/: main.cpp
src/Core/Assets/: FAssetManager.cpp  FAssetManager.h  FMaterial.cpp  FMaterial.h  FMaterialInstance.cpp  FMaterialInstance.h  FTexture.cpp  FTexture.h  TextureManager.cpp  TextureManager.h
src/Core/Editor/: UIManager.cpp  UIManager.h
src/Core/GameSystem/: FActor.h  FScene.cpp  FScene.h  InputManager.cpp  InputManager.h  KeyCodes.h
src/Core/GameSystem/Components/: CCamera.cpp  CCamera.h  CDirectionalLight.h  CFirstPersonCamera.cpp  CFirstPersonCamera.h  CMeshRenderer.cpp  CMeshRenderer.h  CPointLight.cpp  CPointLight.h  CTransform.cpp  CTransform.h  Component.cpp  Component.h
src/Core/Geometry/: FMesh.cpp  FMesh.h
src/Core/Graphics/: AllocatedBuffer.h  CommandBufferManager.cpp  CommandBufferManager.h  FVulkanMesh.cpp  FVulkanMesh.h  IRenderPipeline.h  LightData.h  RenderDevice.cpp  RenderDevice.h  RenderPacket.h  ResourceUploadManager.cpp  ResourceUploadManager.h  SceneViewData.h  VulkanContext.cpp  VulkanContext.h  VulkanPipelineBuilder.cpp  VulkanPipelineBuilder.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanTypes.h  VulkanUtils.h
src/Core/Graphics/Pipelines/: FDeferredPipeline.cpp  FDeferredPipeline.h  FForwardPipeline.cpp  FForwardPipeline.h
src/Core/Platform/: AppWindow.cpp  AppWindow.h
src/Core/Utils/: FQuaternion.hpp  Log.cpp  Log.h  VMAImplementation.cpp  VulkanUtils.h
src/Core/Utils/DesignPattern/: Singleton.h
src/Examples/: CMakeLists.txt
src/Examples/TinyRendererModels/: AppLogic.cpp  AppLogic.h  CMakeLists.txt  main.cpp
src/Examples/Tumbler/: AppLogic.cpp  AppLogic.h  CMakeLists.txt  main.cpp
src/GameSystem/: FActor.cpp  FActor.h  FScene.cpp  FScene.h
src/GameSystem/Components/: CTransform.h  Component.h
src/Utils/: FQuaternion.hpp
src/core/: VulkanContext.cpp  VulkanContext.h  VulkanDevice.cpp  VulkanDevice.h  VulkanModel.cpp  VulkanPipeline.cpp  VulkanPipeline.h  VulkanSwapChain.cpp  VulkanSwapChain.h  VulkanWindow.cpp  renderer.cpp  renderer.h
src/examples/: CMakeLists.txt
src/examples/Tumbler/: AppLogic.cpp  AppLogic.h  AppView.cpp  AppView.h  CMakeLists.txt  main.cpp
src/examples/rectangle/: CMakeLists.txt  rectangle.cpp
src/geometry/: FMesh.cpp  FMesh.h
